fix: DataLoader comment

--- a/04-link-prediction.ipynb
+++ b/04-link-prediction.ipynb
@@ -47,7 +47,7 @@
         "import torch\n",
         "torch.__version__"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -74,7 +74,7 @@
         "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-geometric"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
         "import torch_geometric.transforms as T\n",
         "from torch_geometric.datasets import Planetoid"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
         "dataset = Planetoid(root=\"cora\", name='CORA', transform=transform)\n",
         "dataset"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,7 +174,7 @@
       "source": [
         "dataset.num_features"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
       "source": [
         "dataset.num_classes"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
       "source": [
         "dataset[0]"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,6 +252,12 @@
         "\n",
         "The `Data` splits do not lend themselves to batch level training. For this exercise, we will work with each subgraph in its entirety.\n",
         "\n",
+        "Note that you could create `DataLoaders` from the splits by doing this:\n",
+        "\n",
+        "`train_loader = DataLoader([train_dataset], shuffle=True, ...)`\n",
+        "\n",
+        "but it will result in a single batch.\n",
+        "\n",
         "Separate the splits into a `train_dataset`, `val_dataset` and `test_dataset`."
       ]
     },
@@ -263,7 +269,7 @@
       "source": [
         "from torch_geometric.loader import DataLoader"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +280,7 @@
       "source": [
         "train_dataset, val_dataset, test_dataset = dataset[0]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +326,7 @@
         "import torch.nn.functional as F\n",
         "import torch_geometric.nn as pyg_nn"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +371,7 @@
         "  def loss(self, pred, label):\n",
         "    return F.binary_cross_entropy_with_logits(pred, label)\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +388,7 @@
         "pred = model(train_dataset)\n",
         "print(pred.size())"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +452,7 @@
       "source": [
         "from sklearn.metrics import roc_auc_score"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -493,7 +499,7 @@
         "        .format(epoch + 1, train_loss, train_auc, val_loss, val_auc))\n",
         "  return history"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -525,7 +531,7 @@
         "\n",
         "NUM_EPOCHS = 100"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +547,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "device"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +570,7 @@
         "model = LinkPredictor(INPUT_DIM, HIDDEN_DIM, OUTPUT_DIM, NUM_GCN_LAYERS, DROPOUT_PCT)\n",
         "optimizer = torch.optim.Adam(params=model.parameters(), lr=LEARNING_RATE)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +585,7 @@
       "source": [
         "history = train_loop(model, optimizer, train_dataset, val_dataset, device, NUM_EPOCHS)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +615,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -654,7 +660,7 @@
         "\n",
         "display_training_plots(history)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -694,7 +700,7 @@
         "_, test_auc = eval_step(model, test_dataset, device, is_validation=False)\n",
         "print(\"Test AUC {:.5f}\".format(test_auc))"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,7 +719,7 @@
       "source": [
         ""
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     }
   ]
