--- a/04x-link-prediction.ipynb
+++ b/04x-link-prediction.ipynb
@@ -149,6 +149,12 @@
         "\n",
         "The `Data` splits do not lend themselves to batch level training. For this exercise, we will work with each subgraph in its entirety.\n",
         "\n",
+        "Note that you could create `DataLoaders` from the splits by doing this:\n",
+        "\n",
+        "`train_loader = DataLoader([train_dataset], shuffle=True, ...)`\n",
+        "\n",
+        "but it will result in a single batch.\n",
+        "\n",
         "Separate the splits into a `train_dataset`, `val_dataset` and `test_dataset`."
       ]
     },
