fix: suppress pip output, fix cora link

--- a/02-node-classification.ipynb
+++ b/02-node-classification.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "Most scientific research is usually based heavily on previous work, and it is common for authors to give credit for such work in their papers in the form of citations. This forms a citation graph. In this graph each node represents a scientific paper, and each edge represents a citation from one paper to another. In addition, each node has a feature vector associated with it.\n",
         "\n",
-        "For this example, use the [CORA Dataset](https://relational.fit.cvut.cz/dataset/CORA) available from the `torch_geometric.datasets.Planetoid` package.\n",
+        "For this example, use the [CORA Dataset](https://graphsandnetworks.com/the-cora-dataset/) available from the `torch_geometric.datasets.Planetoid` package.\n",
         "\n",
         "## Setup\n",
         "\n",
@@ -50,7 +50,7 @@
         "import torch\n",
         "torch.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -81,7 +81,7 @@
         "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-geometric"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
       "source": [
         "import torch_geometric"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "dataset = Planetoid(root=\"cora\", name=\"Cora\")\n",
         "dataset"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
       "source": [
         "dataset.num_features"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +211,7 @@
       "source": [
         "dataset.num_classes"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +237,7 @@
       "source": [
         "dataset[0]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,7 +263,7 @@
       "source": [
         "dataset[0].train_mask.count_nonzero()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
       "source": [
         "dataset[0].val_mask.count_nonzero()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
       "source": [
         "dataset[0].test_mask.count_nonzero()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +350,7 @@
       "source": [
         "BATCH_SIZE = 32"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +365,7 @@
         "val_loader = DataLoader(dataset, batch_size=BATCH_SIZE)\n",
         "test_loader = DataLoader(dataset, batch_size=BATCH_SIZE)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -460,7 +460,7 @@
         "  def loss(self, pred, label):\n",
         "    return F.nll_loss(pred, label)\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
         "\n",
         "print(\"pred:\", pred.size())"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
         "        .format(epoch + 1, train_loss, train_acc, val_loss, val_acc))\n",
         "  return history"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -644,7 +644,7 @@
         "\n",
         "NUM_EPOCHS = 500"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +660,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "device"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +683,7 @@
         "model = NodeClassifier(INPUT_DIM, NUM_GCN_LAYERS, HIDDEN_DIM, OUTPUT_DIM, DROPOUT_PCT)\n",
         "model = model.to(device)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -701,7 +701,7 @@
         "optimizer = optim.AdamW(model.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
         "optimizer"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
       "source": [
         "history = train_loop(model, optimizer, train_loader, val_loader, device, NUM_EPOCHS)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,7 +800,7 @@
         "\n",
         "display_training_plots(history)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,7 +842,7 @@
         "_, test_acc = eval_step(model, test_loader, device)\n",
         "print(\"Accuracy on test set: {:.5f}\".format(test_acc))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,7 +919,7 @@
         "model_gat = NodeClassifierGAT(INPUT_DIM, NUM_GCN_LAYERS, HIDDEN_DIM, OUTPUT_DIM, DROPOUT_PCT)\n",
         "model_gat = model_gat.to(device)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -935,7 +935,7 @@
         "optimizer_gat = optim.AdamW(model_gat.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
         "history_gat = train_loop(model_gat, optimizer_gat, train_loader, val_loader, device, NUM_EPOCHS)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -969,7 +969,7 @@
       "source": [
         "display_training_plots(history_gat)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -998,7 +998,7 @@
         "_, test_acc = eval_step(model_gat, test_loader, device)\n",
         "print(\"Accuracy on test set: {:.5f}\".format(test_acc))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,7 +1075,7 @@
         "model_sage = NodeClassifierSAGE(INPUT_DIM, NUM_GCN_LAYERS, HIDDEN_DIM, OUTPUT_DIM, DROPOUT_PCT)\n",
         "model_sage = model_sage.to(device)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1091,7 +1091,7 @@
         "optimizer_sage = optim.AdamW(model_sage.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
         "history_sage = train_loop(model_sage, optimizer_sage, train_loader, val_loader, device, NUM_EPOCHS)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1125,7 +1125,7 @@
       "source": [
         "display_training_plots(history_sage)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1154,7 +1154,7 @@
         "_, test_acc = eval_step(model_sage, test_loader, device)\n",
         "print(\"Accuracy on test set: {:.5f}\".format(test_acc))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
