--- a/02x-node-classification.ipynb
+++ b/02x-node-classification.ipynb
@@ -29,7 +29,7 @@
         "\n",
         "Most scientific research is usually based heavily on previous work, and it is common for authors to give credit for such work in their papers in the form of citations. This forms a citation graph. In this graph each node represents a scientific paper, and each edge represents a citation from one paper to another. In addition, each node has a feature vector associated with it.\n",
         "\n",
-        "For this example, use the [CORA Dataset](https://relational.fit.cvut.cz/dataset/CORA) available from the `torch_geometric.datasets.Planetoid` package.\n",
+        "For this example, use the [CORA Dataset](https://graphsandnetworks.com/the-cora-dataset/) available from the `torch_geometric.datasets.Planetoid` package.\n",
         "\n",
         "## Setup\n",
         "\n",
