--- a/03x-graph-classification.ipynb
+++ b/03x-graph-classification.ipynb
@@ -70,63 +70,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uYaWDKx2MYoA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c22dba78-3b32-4cb9-a344-b8c4d1eb6215"
+        "id": "_94GrcamWm59"
       },
       "source": [
+        "%%capture\n",
         "!pip install -q torch-scatter -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-geometric\n",
         "!pip install ogb"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[K     |████████████████████████████████| 10.4 MB 4.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 3.7 MB 5.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 325 kB 5.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 407 kB 35.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 45 kB 3.3 MB/s \n",
-            "\u001b[?25h  Building wheel for torch-geometric (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting ogb\n",
-            "  Downloading ogb-1.3.2-py3-none-any.whl (78 kB)\n",
-            "\u001b[K     |████████████████████████████████| 78 kB 3.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from ogb) (1.19.5)\n",
-            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.7/dist-packages (from ogb) (0.22.2.post1)\n",
-            "Requirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.7/dist-packages (from ogb) (1.1.5)\n",
-            "Requirement already satisfied: six>=1.12.0 in /usr/local/lib/python3.7/dist-packages (from ogb) (1.15.0)\n",
-            "Requirement already satisfied: tqdm>=4.29.0 in /usr/local/lib/python3.7/dist-packages (from ogb) (4.62.3)\n",
-            "Requirement already satisfied: torch>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from ogb) (1.9.0+cu111)\n",
-            "Requirement already satisfied: urllib3>=1.24.0 in /usr/local/lib/python3.7/dist-packages (from ogb) (1.24.3)\n",
-            "Collecting outdated>=0.2.0\n",
-            "  Downloading outdated-0.2.1-py3-none-any.whl (7.5 kB)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from outdated>=0.2.0->ogb) (2.23.0)\n",
-            "Collecting littleutils\n",
-            "  Downloading littleutils-0.2.2.tar.gz (6.6 kB)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->ogb) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->ogb) (2018.9)\n",
-            "Requirement already satisfied: scipy>=0.17.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.20.0->ogb) (1.4.1)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.20.0->ogb) (1.0.1)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torch>=1.6.0->ogb) (3.7.4.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->outdated>=0.2.0->ogb) (3.0.4)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->outdated>=0.2.0->ogb) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->outdated>=0.2.0->ogb) (2021.5.30)\n",
-            "Building wheels for collected packages: littleutils\n",
-            "  Building wheel for littleutils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for littleutils: filename=littleutils-0.2.2-py3-none-any.whl size=7048 sha256=a48a9fc922b84b7ae43e5d637d5125d1fc90e1c23870b2d9ca84c64d64168940\n",
-            "  Stored in directory: /root/.cache/pip/wheels/d6/64/cd/32819b511a488e4993f2fab909a95330289c3f4e0f6ef4676d\n",
-            "Successfully built littleutils\n",
-            "Installing collected packages: littleutils, outdated, ogb\n",
-            "Successfully installed littleutils-0.2.2 ogb-1.3.2 outdated-0.2.1\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
