--- a/06-custom-layer.ipynb
+++ b/06-custom-layer.ipynb
@@ -43,7 +43,7 @@
         "import torch\n",
         "torch.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -66,12 +66,13 @@
         "id": "BF0PxTc9vkzE"
       },
       "source": [
+        "%%capture\n",
         "!pip install -q torch-scatter -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "\n",
         "!pip install -q torch-geometric"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +141,7 @@
         "\n",
         "import torch_scatter"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +209,7 @@
         "    out = torch_scatter.scatter(inputs, index, dim=0, reduce=\"max\")\n",
         "    return out\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +253,7 @@
         "out = custom_layer(x, edge_index)\n",
         "print(\"out:\", out.size())"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
