--- a/07-custom-dataset.ipynb
+++ b/07-custom-dataset.ipynb
@@ -61,7 +61,7 @@
         "import torch\n",
         "torch.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -84,11 +84,12 @@
         "id": "a3adiZrCKn91"
       },
       "source": [
+        "%%capture\n",
         "!pip install -q torch-scatter -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-geometric"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +131,7 @@
         "    fedge.write(\"{:d}\\t{:d}\\n\".format(src, dst))\n",
         "  fedge.close()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +155,7 @@
       "source": [
         "import torch_geometric.data as pyg_data"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +166,7 @@
       "source": [
         "# shutil.rmtree(\"random/processed\", ignore_errors=True)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +225,7 @@
         "    data = torch.load(os.path.join(self.processed_dir, 'random-{:d}.pt'.format(idx)))\n",
         "    return data\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +255,7 @@
         "dataset = RandomDataset(\"random\")\n",
         "dataset"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +289,7 @@
       "source": [
         "len(dataset)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,7 +315,7 @@
       "source": [
         "dataset.num_features"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +341,7 @@
       "source": [
         "dataset[0]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +383,7 @@
         "  print(batch)\n",
         "  break"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +402,7 @@
       "source": [
         ""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     }
   ]
