--- a/07x-custom-dataset.ipynb
+++ b/07x-custom-dataset.ipynb
@@ -84,6 +84,7 @@
         "id": "a3adiZrCKn91"
       },
       "source": [
+        "%%capture\n",
         "!pip install -q torch-scatter -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
         "!pip install -q torch-geometric"
