fix: switch to ROC-AUC

--- a/03x-graph-classification.ipynb
+++ b/03x-graph-classification.ipynb
@@ -92,7 +92,7 @@
         "\n",
         "The [ogbg-molhiv](https://ogb.stanford.edu/docs/graphprop/#ogbg-mol) dataset is part of the [MoleculeNet](https://pubs.rsc.org/en/content/articlehtml/2018/sc/c7sc02664a) dataset. \n",
         "\n",
-        "The dataset contains 41,127 molecules, each represented as a graph. Each graph represents a molecule, where nodes are atoms, and edges are chemical bonds. Input node features are 9-dimensional, containing atomic number and chirality, as well as other additional atom features such as formal charge and whether the atom is in the ring or not. \n",
+        "The dataset contains 41,127 molecules, each represented as a graph. Each graph represents a molecule, where nodes are atoms, and edges are chemical bonds. Input node features are 9-dimensional, containing atomic number and chirality, as well as other additional atom features such as formal charge and whether the atom is in the ring or not. Each molecule contains a 0 or 1 label, indicating whether the molecule inhibits HIV virus replication or not.\n",
         "\n",
         "Use the `PygGraphPropPredDataset` loader to retrieve the `ogbg-molhiv` dataset. To see how this is done, refer to the Data Loaders section of the [OGB documentation](https://ogb.stanford.edu/docs/home/).\n",
         "\n",
@@ -155,6 +155,41 @@
       "cell_type": "code",
       "metadata": {
         "id": "oy9KHBglYke3"
+      },
+      "source": [
+        "# your code here"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Js7KKsq8eltF"
+      },
+      "source": [
+        "## Visualize Label Distribution\n",
+        "\n",
+        "As expected, the dataset is very heavily skewed towards molecules that don't inhibit HIV replication.\n",
+        "\n",
+        "Verify that the dataset is heavily skewed. Compute the label distribution and visualize it using a histogram."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KhHhPxr7enbA"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mv_RKB0denSD"
       },
       "source": [
         "# your code here"
@@ -272,9 +307,21 @@
         "\n",
         "As with our node classification example, the training loop is composed of alternate calls to `train_step` and `eval_step` functions over multiple epochs of training.\n",
         "\n",
+        "However, unlike the node classification example, we will use ROC-AUC as our evaluation criteria rather than accuracy. The [rationale for this choice](https://datascience.stackexchange.com/questions/806/advantages-of-auc-vs-standard-accuracy) is explained in detail in the accepted answer in this Stack Exchange page. Basically, AUC is a better metric to gauge the strength of our model compared to accuracy because:\n",
+        "\n",
+        "* our dataset is skewed\n",
+        "* our task is binary classification\n",
+        "* AUC forces model selection that are more discriminative.\n",
+        "\n",
+        "The [Scikit-Learn documentation page on ROC-AUC]((https://scikit-learn.org/stable/modules/model_evaluation.html#roc-metrics)) provides additional intuition about the ROC-AUC metric.\n",
+        "\n",
+        "So our steps are as follows:\n",
+        "\n",
         "1. Build the `train_step` function with the following signature. You can copy-paste most of what you built in the previous exercise except for some important differences.\n",
         "    * the size of the batch is given by `batch.num_graphs` and not just `len(batch)`\n",
-        "    * we are using a different loss function `CrossEntropyLoss` instead of `NLLLoss`, that might require changes to how you compute the loss.\n",
+        "    * we are using a different loss function `BCEWithLogits` instead of `NLLLoss`, that might require changes to how you compute the loss.\n",
+        "    * We will need to compute the ROC-AUC instead of the accuracy per batch in our `train_step` and `eval_step` functions.\n",
+        "    * At the end of each batch, accumulate a data structure `label_preds` which is a tuple of (label:Float, prediction:Array`[(Float, Float)]` and return it along with the `loss` and `accuracy`.\n",
         "\n",
         "```\n",
         "def train_step(model: torch.nn.Module, \n",
@@ -284,11 +331,14 @@
         "               device: torch.Device\n",
         "              ) -> (\n",
         "               train_loss: Float, \n",
-        "               train_acc: Float\n",
+        "               train_acc: Float,\n",
+        "               label_preds: List[(Float, [Float, Float])]\n",
         "              )\n",
         "```\n",
         "\n",
         "2. Build the `eval_step` function with the signature given below. As before, the same code should be usable for validation and testing by appropriately setting the `is_validation` parameter. Also you may be able to copy-paste the code from the previous exercise here as well, with the same caveats listed in the instructions for the `train_step`.\n",
+        "\n",
+        "As with the `train_step`, accumulate and return the `label_preds` data structure.\n",
         "\n",
         "```\n",
         "def eval_step(model: torch.nn.Module, \n",
@@ -298,11 +348,14 @@
         "              is_validation=False: boolean\n",
         "            ) -> (\n",
         "              eval_loss: Float,\n",
-        "              eval_acc: Float\n",
+        "              eval_acc: Float,\n",
+        "              label_preds: List[Float, [Float, Float]]\n",
         "            )\n",
         "```\n",
         "\n",
-        "3. Build the `train_loop` function with the following signature. You should be able to copy-paste this directly from the node classification exercise. It takes in a union of parameters required by the `train_step` and `eval_step` and produces a `history` list of the tuple `(train_loss, train_acc, val_loss, val_acc)` for drawing the loss plots. It periodically (`log_every`) writes out the values to console.\n",
+        "3. Build the `train_loop` function with the following signature. You should be able to copy-paste this directly from the node classification exercise. It takes in a union of parameters required by the `train_step` and `eval_step` and produces a `history` list of the tuple `(train_loss, train_acc, train_auc, val_loss, val_acc, val_auc)` for drawing the loss plots. It periodically (`log_every`) writes out the values to console.\n",
+        "\n",
+        "Use the `roc_auc_score` from Scikit-Learn to compute the ROC-AUC score for training and validation from the `label_preds` data structure, and report it along with the train and validation loss and accuracy.\n",
         "\n",
         "```\n",
         "def train_loop(model: torch.nn.Module, \n",
@@ -313,7 +366,9 @@
         "               device: torch.Device, \n",
         "               num_epochs: Int, \n",
         "               log_every=5: Int\n",
-        "              ) -> List[(Float, Float, Float, Float)\n",
+        "              ) -> List[(Float, Float, Float, \n",
+        "                         Float, Float, Float)]\n",
+        "\n",
         "```"
       ]
     },
@@ -387,9 +442,9 @@
       "source": [
         "## Evaluation\n",
         "\n",
-        "Now evaluate your trained model on the held out test set. You can reuse the `eval_step()` function that you used for evaluating the model with the validation set during the training.\n",
+        "Now evaluate your trained model on the held out test set, reporting both accuracy and AUC scores. You can reuse the `eval_step()` function that you used for evaluating the model with the validation set during the training.\n",
         "\n",
-        "Report the accuracy value on the test set to 5 decimal places."
+        "Report the accuracy and AUC score values on the test set to 5 decimal places."
       ]
     },
     {
@@ -419,7 +474,7 @@
         "4. Instantiate the `Adam` optimizer with the new model parameters.\n",
         "5. Run the training loop for `NUM_EPOCHS` epochs, capturing the training and validation loss and accuracies.\n",
         "6. Use the list of tuples to plot the training curves for training and validation loss and accuracies.\n",
-        "7. Compute and report the accuracy of the network with MAX pooling against the held-out test set."
+        "7. Compute and report the accuracy and AUC of the network with MAX pooling against the held-out test set."
       ]
     },
     {
@@ -449,7 +504,7 @@
         "4. Instantiate the `Adam` optimizer with the new model parameters.\n",
         "5. Run the training loop for `NUM_EPOCHS` epochs, capturing the training and validation loss and accuracies.\n",
         "6. Use the list of tuples to plot the training curves for training and validation loss and accuracies.\n",
-        "7. Compute and report the accuracy of the network with SUM pooling against the held-out test set."
+        "7. Compute and report the accuracy and AUC of the network with SUM pooling against the held-out test set."
       ]
     },
     {
